# vp8-face-roi-demo

./: .gitignore  CMakeLists.txt  README.md
html/: compare.html
src/: VideoFaceDetector.cpp  VideoFaceDetector.h  config.h  main.cpp  mp4recorder.cpp  mp4recorder.h  vp8encoder.cpp  vp8encoder.h
